objects/partner_portal_prospect__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <formula>End_User_Account__r.Owner.FirstName+&apos; &apos;+End_User_Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_at_Genesys__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AE of genesys</description>
        <label>Account Executive at Genesys</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Portal_Opportunity_Registration2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_Custom__c</fullName>
        <label>Customer End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account__r.Owner.FirstName+&apos; &apos;+Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>partner_portal_prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_Amount__c</fullName>
        <label>Annual Contract Value Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Submitted</fullName>
                </value>
                <value>
                    <fullName>NA-RCM Approved</fullName>
                </value>
                <value>
                    <fullName>NA-RCM Rejected</fullName>
                </value>
                <value>
                    <fullName>NA- Regional Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>NA- Regional Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>End User AM Approved</fullName>
                </value>
                <value>
                    <fullName>End User AM Rejected</fullName>
                </value>
                <value>
                    <fullName>NA-Account Executive Approved</fullName>
                </value>
                <value>
                    <fullName>NA-Account Executive Rejected</fullName>
                </value>
                <value>
                    <fullName>NA-AE Sales Manager Approved</fullName>
                </value>
                <value>
                    <fullName>NA-AE Sales Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM- Regional Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- Regional Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM-  Account Executive Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- Account Executive Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM- AE Sales Manager Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- AE Sales Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>LATAM- RCM Approved</fullName>
                </value>
                <value>
                    <fullName>LATAM- RCM Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- Regional Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- Regional Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- Account Executive Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- Account Executive Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- AE Sales Manager Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- AE Sales Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>APAC- RCM Approved</fullName>
                </value>
                <value>
                    <fullName>APAC- RCM Rejected</fullName>
                </value>
                <value>
                    <fullName>EMEA- Regional Channel Manager Approved</fullName>
                </value>
                <value>
                    <fullName>EMEA- Regional Channel Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>EMEA- Account Executive Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_budget_for_this_opportunity__c</fullName>
        <inlineHelpText>Approved Budget</inlineHelpText>
        <label>Approved budget for this opportunity ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approximate_size_of_this_opportunity__c</fullName>
        <inlineHelpText>What is the approximate size of this Genesys opportunity &amp; which Genesys solutions are being proposed?</inlineHelpText>
        <label>Approximate size of this opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_of_Materials__c</fullName>
        <label>Bill of Materials</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <inlineHelpText>Enter the budget amount</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate when a Consultant contact helped generate the opportunity</description>
        <inlineHelpText>Populate when a Consultant contact helped generate the opportunity</inlineHelpText>
        <label>CLP Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consultant Record Type</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Portal Opportunity Registration (CLP Contact)</relationshipLabel>
        <relationshipName>Partner_Portal_Opportunity_Registration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <description>DL 4/14/2016 Requested by Janelle</description>
        <label>Campaign ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <description>DL 4/14/2016 Requested by Janelle</description>
        <label>Campaign Source</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Manager Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Account__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Company_Name__c</fullName>
        <label>Customer Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_City__c</fullName>
        <label>Customer Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Partner Portal Opportunity Registration</relationshipLabel>
        <relationshipName>Partner_Portal_Opportunity_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Email__c</fullName>
        <label>Customer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name__c</fullName>
        <label>Customer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Phone__c</fullName>
        <label>Customer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_State__c</fullName>
        <label>Customer Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Division_Group__c</fullName>
        <label>Customer Division/Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_End_User_Company_Name__c</fullName>
        <label>Customer (End User) Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_HQ_Address__c</fullName>
        <description>Customer HQ address. This is used for reference so CM’s can input the address information in the prospect records they create</description>
        <label>Customer HQ Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_all_solutions_currently_owned__c</fullName>
        <inlineHelpText>If yes to the above please describe all solutions currently owned.</inlineHelpText>
        <label>Describe all solutions currently owned</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What is the Opportunity Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Portal Opportunity Registration (End User Account)</relationshipLabel>
        <relationshipName>Partner_Portal_Opportunity_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genesys_AE__c</fullName>
        <label>Account Executive at Genesys</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Genesys Channel Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>partner_portal_prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Yes__c</fullName>
        <label>If Yes,</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsOpportunity_Exist__c</fullName>
        <formula>if(Opportunity__c!=null,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOpportunity_Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_new_logo_or_green_field_opp__c</fullName>
        <inlineHelpText>Is this a new logo or green field opportunity for Genesys?</inlineHelpText>
        <label>Is this a new logo or green field opp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Offer__c</fullName>
        <description>What it Does? Stores list of lead offers.
Downstream Impact? N/A 
Which department is owner? IT
DL 1/16/19 Requested to update label only to Lead Platform</description>
        <inlineHelpText>The combination of previous platform type &amp; offering type selections made to classify a deal registration</inlineHelpText>
        <label>Lead Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Offer</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Amount__c</fullName>
        <label>License Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_All_the_Vendors__c</fullName>
        <inlineHelpText>List other vendors participating in this opportunity</inlineHelpText>
        <label>List All the Vendors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Agents__c</fullName>
        <label>Number of Agents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1001-5000</fullName>
                </value>
                <value>
                    <fullName>&gt;5001</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offering_Details__c</fullName>
        <label>Offering Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Offer__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Pilot/Trial/POC</fullName>
                </value>
                <value>
                    <fullName>Offer Conversion</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Agreement (ELA)</fullName>
                </value>
                <value>
                    <fullName>Cloud Partner (PPU)</fullName>
                </value>
                <value>
                    <fullName>Version Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offerings_Type__c</fullName>
        <label>Offerings Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Account_Name__c</fullName>
        <description>This simply copies the value of Account Name from Account look up object on Partner Portal Opportunity registration object</description>
        <formula>Account__r.Name</formula>
        <label>Opp_Account_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filtered lookup based on region to User object to be used as Channel Manager for Opportunity Registration approval process in partner portal</description>
        <inlineHelpText>Please select Region before selecting Channel Manager</inlineHelpText>
        <label>Opportunity Channel Manager</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Employee_Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Regions__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Portal_Opportunity_Registration1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency__c</fullName>
        <description>need to remove Australian and Canadian Dollar for opportunity type GEN - Opportunity Record Type</description>
        <label>Opportunity Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD - U.S. Dollar</fullName>
                    <default>true</default>
                    <label>USD - U.S. Dollar</label>
                </value>
                <value>
                    <fullName>BRL - Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>GBP - British Pound</fullName>
                </value>
                <value>
                    <fullName>EUR - Euro</fullName>
                </value>
                <value>
                    <fullName>JPY - Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>AUD - Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>CAD - Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>NZD - New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>SGD - Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>ZAR - South African Rand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <defaultValue>&apos;New&apos;</defaultValue>
        <description>Type of opporutnity &apos;Add On&apos; or &apos;New&apos;. Used on partner side.</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Order_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Partner Portal Opportunity Registration</relationshipLabel>
        <relationshipName>Partner_Portal_Opportunity_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Rejection_Reason__c</fullName>
        <label>Other Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Please_provide_documentaion__c</fullName>
        <inlineHelpText>If yes to any of the above, please provide documentation to your Channel Manager</inlineHelpText>
        <label>Please provide documentaion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.End_User_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partner Portal Opportunity Registration (Primary Contact)</relationshipLabel>
        <relationshipName>Partner_Portal_Opportunity_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Solution_Category__c</fullName>
        <label>Primary Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Desktop</fullName>
                </value>
                <value>
                    <fullName>Workload Management</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Primary_Solution_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info Mart</fullName>
                </value>
                <value>
                    <fullName>Interactive Insights</fullName>
                </value>
                <value>
                    <fullName>Content Analyzer (Sentiment Analysis)</fullName>
                </value>
                <value>
                    <fullName>Predictive Routing</fullName>
                </value>
                <value>
                    <fullName>Pulse</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile Engagement</fullName>
                </value>
                <value>
                    <fullName>Web Engagement</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Social Engagement</fullName>
                </value>
                <value>
                    <fullName>Web Collaboration</fullName>
                </value>
                <value>
                    <fullName>Knowledge Center</fullName>
                </value>
                <value>
                    <fullName>Genesys Voice Platform</fullName>
                </value>
                <value>
                    <fullName>Call Qualification &amp; Parking</fullName>
                </value>
                <value>
                    <fullName>Notifications (voice, text, email)</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Speech Recognition/TTS (Nuance)</fullName>
                </value>
                <value>
                    <fullName>Inbound Voice</fullName>
                </value>
                <value>
                    <fullName>Outbound Voice</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>Workforce Management</fullName>
                </value>
                <value>
                    <fullName>Interaction Analytics</fullName>
                </value>
                <value>
                    <fullName>Interaction Recording</fullName>
                </value>
                <value>
                    <fullName>Quality Management</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Training Manager</fullName>
                </value>
                <value>
                    <fullName>Skills Assessor</fullName>
                </value>
                <value>
                    <fullName>iWD</fullName>
                </value>
                <value>
                    <fullName>Conversation Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotional_Offer__c</fullName>
        <description>Populated when a Promotional Offer is made as a part of the opportunity</description>
        <inlineHelpText>Populated when a Promotional Offer is made as a part of the opportunity</inlineHelpText>
        <label>Promotional Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purebridge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_of_Concept__c</fullName>
        <label>Proof of Concept</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis__c</fullName>
        <label>ROI Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Channel_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>updated the field from trigger and get the value from list Custom setting &apos;Partner Rebate Regional Channel Lead&apos;</description>
        <label>Regional Channel Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Portal_Opportunity_Registration3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add-On’s not considered incremental</fullName>
                </value>
                <value>
                    <fullName>RFP not considered incremental</fullName>
                </value>
                <value>
                    <fullName>Already registered by another Partner</fullName>
                </value>
                <value>
                    <fullName>Already in our system by a Genesys rep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Portal_Opportunity_Reg_SalesLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_FL__c</fullName>
        <description>This is a duplicate status field created for Deal registration readonly page in Portal</description>
        <formula>TEXT(Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request Submitted</fullName>
                    <default>true</default>
                    <label>Request Submitted</label>
                </value>
                <value>
                    <fullName>Request Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>This_Opportunity_is_for__c</fullName>
        <label>This Opportunity is for:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <summarizedField>Partner_Opporty_Registr_Product__c.Amount_Currency__c</summarizedField>
        <summaryForeignKey>Partner_Opporty_Registr_Product__c.Opporty_Registration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>